tests/examples/good/garbage_collector/good010.lat
int main() {
    {
        string a = "test" + "test2";
        string b = a;
        {
            string a = "test" + "test2";
            string c = "test" + "test2";
            {
                string x = "test" + "test2";
                "test" + "test2";
                return 0;
            }
        }
    }
    return 0;
}