tests/examples/bad/type_not_declared.lat
int main() {
    return 0;
}

int f(custom_type a) {
    return 0;
}